# Todo-full-stack-web-application-hackathon-02

./: .env.example  .gitignore  README.md  docker-compose.yml  test_chatbot.py  vercel.json
.claude/agents/: ai-chatbot-agent.md  better-auth-configurator.md  database-designer.md  docker-specialist.md  fastapi-backend.md  frontend-ui-builder.md  input-handler.md  kubernetes-orchestrator.md  system-architect.md  task-manager.md  task-storage-persistence.md
.claude/commands/: sp.specify
.claude/skills/: APIFetchSkill.md  DockerSkill.md  FastAPISkill.md  HelmSkill.md  JWTVerificationSkill.md  (+5 more)
backend/: .dockerignore  .env.temp  .gitignore  Dockerfile  README.md  db.py  debug_auth_components.py  debug_cors.py  debug_create_todo.py  debug_signin.py  debug_signup.py  debug_start.py  debug_user_check.py  list_gemini_models.py  list_models_15.py  list_models_debug.py  list_models_flash.py  main.py  models.py  pyproject.toml  requirements.txt  reset_schema.py  run_server.py  test_agent_debug.py  test_server.py  trace_gemini.py  trace_imports.py  verify_cors.py  verify_db.py
backend/agents/: gemini_client.py  todo_agent.py
backend/dependencies/: auth.py
backend/mcp/: registry.py  tools.py
backend/routes/: auth.py  chat.py  tasks.py
backend/tests/: conftest.py  test_auth.py  test_chat_api.py  test_models.py  test_tasks_api.py
docs/: PHASE4-KUBERNETES.md
frontend/: .dockerignore  .env.example  .gitignore  Dockerfile  next.config.mjs  package-lock.json  package.json  tailwind.config.ts
scripts/: create-secrets.ps1  deploy-minikube.ps1  deploy-minikube.sh
(+78 files in other folders)
